updates default url for webview

--- a/Born-Again-Info.plist
+++ b/Born-Again-Info.plist
@@ -12,6 +12,8 @@
 		<string>LaunchScreenBgColor</string>
 		<key>UIImageName</key>
 		<string>LaunchScreenBgImage</string>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
 	</dict>
 </dict>
 </plist>
